--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import '~antd/dist/antd.css';
 
+/*
 .App {
   text-align: center;
 }
@@ -38,3 +39,4 @@
     transform: rotate(360deg);
   }
 }
+*/
